--- a/README
+++ b/README
@@ -1,6 +1,18 @@
-The org folder is for importing org.apache.io.* (this can be found at http://commons.apache.org/io/)
+Introduction to Java-REPL
+To start the program, run Main. It will prompt you for an input. 
+Imports will be handled normally. 
+All orders("int a = 5;" and the like) will be put into main.
+To enter a method, use a } at the start.
+Example run:
+$Java-REPL Shell
+"Please begin input"
+$import java.util.List;
+$int a = 5;
 
- --The Win Monkeys
+//Note to KellerKeller, continue writing this when main is viewable.
+
+The org folder is for importing org.apache.io.* (this can be found at http://commons.apache.org/io/)
+--The Win Monkeys
 
 
 JavaSourceFromString.java: No clue
